# modeleval-interface

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
config/: models.yaml
data/: sample_qa.json
src/llm_eval/: cli.py  dataset_cleaner.py  noise_augment.py  runner.py  transcriber.py
src/llm_eval/metrics/: audio_quality.py  evaluator.py
src/llm_eval/models/: __init__.py  base.py  fireworks_model.py  gemini_model.py  hf_local_model.py  openai_model.py
src/llm_eval/output/: exporter.py  table.py
